--- a/user_comments/templates/user_comments/base.html
+++ b/user_comments/templates/user_comments/base.html
@@ -21,12 +21,12 @@
           text-decoration: none;
       }     
 
-      li a:hover:not(.active) {
-          background-color: #111;
+      li a:hover {
+          background-color: #4CAF50;
       }     
 
       .active {
-          background-color: #4CAF50;
+          background-color: #696969;
       }
     </style>
   </head>
