--- a/user_comments/templates/user_comments/details.html
+++ b/user_comments/templates/user_comments/details.html
@@ -1,12 +1,15 @@
 {% extends "user_comments/base.html" %}
 {% block content %}
-    <h1>Details of user</h1>
+    <h1>User Comments</h1>
     {% for commen in comments %}
     <ul>    
       <li><strong>Title:</strong> {{ commen.title }}</li></br>
       <ul>
     	<li><strong>Comment:</strong> {{ commen.comment }}</li></br>
       <li><strong>Date:</strong> {{ commen.commented_at }}</li></br>
+      {% if commen.name.name %}
+      <li><strong>Name:</strong> {{ commen.name.name }}</li></br>
+      {% endif %}
     </ul>
   	</ul>
     {% endfor %}
